--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /home/
 #ENV https_proxy $https_proxy
 #ENV LD_LIBRARY_PATH /usr/lib64
 
-#RUN yum -y install gcc gcc-c++ make
+RUN yum -y install gcc gcc-c++ make
 
 #RUN yum -y install epel-release boost-devel wget
 RUN yum -y install epel-release wget
