--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tesseract",
-  "version": "2.0.0",
+  "name": "tessio",
+  "version": "2.2.4",
   "author": "Rafal Okninski <hpn777@gmail.com>",
   "scripts": {
     "test": "docker-compose up redis nats tests",
