--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "redis": "docker-compose up redis",
     "nats": "docker-compose up nats",
     "all": "docker-compose up redis nats",
-    "down": "docker-compose down"
+    "down": "docker-compose down",
+    "shell": "docker-compose run --rm shell sh"
   },
   "dependencies": {
     "benchmark": "^2.1.4",
