--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -19,4 +19,4 @@ RUN yum -y install git
 RUN curl --silent --location https://rpm.nodesource.com/setup_11.x | bash - \
  && yum -y install nodejs
 
-RUN yum install nc
+RUN yum -y install nc
