--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "2.3.5",
   "author": "Rafal Okninski <hpn777@gmail.com>",
   "scripts": {
-    "test": "docker-compose up redis nats tests",
+    "test": "docker-compose up redis tests",
     "redis": "docker-compose up redis",
-    "nats": "docker-compose up nats",
-    "all": "docker-compose up redis nats",
+    "nats": "docker-compose up",
+    "all": "docker-compose up redis",
     "down": "docker-compose down",
     "shell": "docker-compose run --rm shell sh"
   },
@@ -14,7 +14,6 @@
     "benchmark": "^2.1.4",
     "ioredis": "^4.3.0",
     "lodash": "^4.17.11",
-    "node-nats-streaming": "0.0.51",
     "rxjs": "6.3.3"
   },
   "devDependencies": {
