--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -1,4 +1,4 @@
-FROM centos:7
+FROM centos:8
 
 WORKDIR /home/
 
@@ -6,17 +6,17 @@ WORKDIR /home/
 #ENV https_proxy $https_proxy
 #ENV LD_LIBRARY_PATH /usr/lib64
 
-RUN yum -y install gcc gcc-c++ make
+# RUN yum -y install gcc gcc-c++ make
 
 #RUN yum -y install epel-release boost-devel wget
 RUN yum -y install epel-release wget
 
-RUN yum -y install python-pip
-RUN pip install docker-compose
+# RUN yum -y install python-pip
+# RUN pip install docker-compose
 
 RUN yum -y install git
 
-RUN curl --silent --location https://rpm.nodesource.com/setup_12.x | bash - \
+RUN curl --silent --location https://rpm.nodesource.com/setup_13.x | bash - \
  && yum -y install nodejs
 
 RUN yum -y install nc
